KE-40087 Module refactor (#29474)
* refactor sys-tools & kylin-tool

* fix core-storage UT

* fix kylin-tool pom

* refactor core-job

* refactor core-job

* refactor core-job

* fix code smell

* fix UT

Co-authored-by: qhzhou <qianhao.zhou@kyligence.io>

--- a/pom.xml
+++ b/pom.xml
@@ -541,12 +541,6 @@
                 <artifactId>kylin-core-metrics</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.apache.kylin</groupId>
-                <artifactId>kylin-streaming</artifactId>
-                <version>${project.version}</version>
-                <type>test-jar</type>
-            </dependency>
 
             <!-- arthas -->
             <dependency>
@@ -1135,11 +1129,6 @@
                 <artifactId>commons-cli</artifactId>
                 <version>${commons-cli.version}</version>
                 <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>${commons-lang.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -1988,6 +1977,7 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.owasp.esapi</groupId>
@@ -2870,6 +2860,10 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
