--- a/src/metadata-server/pom.xml
+++ b/src/metadata-server/pom.xml
@@ -34,6 +34,10 @@
             <groupId>org.apache.kylin</groupId>
             <artifactId>kylin-common-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
