--- a/src/second-storage/clickhouse-it/pom.xml
+++ b/src/second-storage/clickhouse-it/pom.xml
@@ -249,6 +249,11 @@
             <artifactId>kylin-metadata-server</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kylin</groupId>
+            <artifactId>kylin-spark-common</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
