KE-41254 fix local debug in KE (#30075)
* KE-41254 allow 'dev' profile to run without sandbox, just local spark and local fs
* KE-41254 add h2 dependency to profile dev
* KE-41254 support mock customer metadata

---------

Co-authored-by: Li Yang <liyang@apache.org>

--- a/src/server/pom.xml
+++ b/src/server/pom.xml
@@ -260,7 +260,6 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <!-- mysql -->
@@ -494,6 +493,16 @@
         </pluginRepository>
     </pluginRepositories>
     <profiles>
+        <profile>
+            <id>dev</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                    <scope>compile</scope>
+                </dependency>
+            </dependencies>
+        </profile>
         <profile>
             <id>sandbox</id>
             <dependencies>
