--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,8 @@
 
         <!-- Spark versions -->
         <delta.version>2.0.2</delta.version>
-        <spark.version>3.2.0-kylin-4.6.10.0-SNAPSHOT</spark.version>
+        
+        <spark.version>3.2.0-kylin-4.6.10.0</spark.version>
 
         <roaring.version>0.9.2-kylin-r4</roaring.version>
 
