--- a/src/query-booter/src/main/resources/config/init.properties
+++ b/src/query-booter/src/main/resources/config/init.properties
@@ -94,6 +94,10 @@ kylin.engine.spark-conf.spark.submit.deployMode=client
 kylin.engine.spark-conf.spark.sql.hive.metastore.version=1.2.2
 kylin.engine.spark-conf.spark.sql.hive.metastore.jars=${KYLIN_HOME}/spark/hive_1_2_2/*
 
+# for V3 Dictionary
+kylin.engine.spark-conf.spark.databricks.delta.retentionDurationCheck.enabled=false
+kylin.engine.spark-conf.spark.databricks.delta.vacuum.parallelDelete.enabled=true
+
 kylin.engine.spark-conf.spark.stage.maxConsecutiveAttempts=1
 
 # spark3 legacy config after calendar switch
